--- a/themes/hugo-freelancer-theme/layouts/partials/head.html
+++ b/themes/hugo-freelancer-theme/layouts/partials/head.html
@@ -14,6 +14,7 @@
 {{ end }}
 {{ "<!-- Custom Fonts -->" | safeHTML }}
 <link href="{{ .Site.BaseURL }}css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" type="image/x-icon" href="../../static/img/favicon.ico" />
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 {{ "<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->" | safeHTML }}
